# brill_games

./: README.rst  brill_games.py  pyproject.toml  setup.py
.github/workflows/: lint.yml
brill_games/: __main__.py  jeopardy.py
