[project]
name = "brill_games"
version = "0.1.0"
description = "The brillest of games."
authors = [
    "MiguelX413 <lbpgaming27@gmail.com>",
    "chrisphamm521 <chris.pham2003@rocketmail.com>",
]
license = "AGPL-3.0"
readme = "README.rst"
python = ">=3.7"
GitHub = "https://github.com/BrillGames/brill_games"
